[package]
name = "seqrepo"
version = "0.10.2"
edition = "2021"
authors = ["Manuel Holtgrewe <manuel.holtgrewe@bih-charite.de>"]
description = "Port of (read-only) functionality of biocommons/seqrepo to Rust"
license = "Apache-2.0"
homepage = "https://github.com/varfish-org/seqrepo-rs"
readme = "README.md"

[lib]
name = "seqrepo"
path = "src/lib.rs"

[features]
# By default, we enable the directory-based implementation.
default = ["impl"]
# Directory-based implementation of the interface as provided by the Python
# reference implementation.  This will create a runtime dependency on
# `libsqlite3`.
impl = ["dep:chrono", "dep:noodles", "dep:rusqlite"]
# Optional caching implementation that is useful in testing scenarios where
# one only wants to provide minimal data, e.g., in continuous integration.
cached = ["impl"]

[dependencies]
chrono = { version = "0.4", optional = true }
rusqlite = { version = "0.31", optional = true }
thiserror = "1.0"
tracing = "0.1"

[dependencies.noodles]
version = "0.77.0"
features = ["bgzf", "core", "fasta"]
optional = true

[dev-dependencies]
anyhow = "1.0"
clap-verbosity-flag = {version = "2.0"}
clap = { version = "4.1", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
pretty_assertions = "1.3"
temp_testdir = "0.2"
test-log = "0.2"
textwrap = "0.16"
tracing-subscriber = {version = "0.3" }
